dnl Process this file with autoconf to produce a configure script.
AC_INIT(mmake.c)
AM_INIT_AUTOMAKE(MetaMake,0.6)
AC_REVISION($Revision$)dnl
AC_PREREQ(2.12)

#don't know where else to put this...
AC_MSG_CHECKING([Building MetaMake in .. ])
METAMAKE_BUILDDIR=$PWD
AC_MSG_RESULT($METAMAKE_BUILDDIR)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(stdarg.h string.h unistd.h sys/stat.h sys/types.h netinet/in.h)

AC_MSG_CHECKING([where to build objfiles])
AC_ARG_WITH(objfiledir,AC_HELP_STRING([--with-objfiledir=DIR],[Build Object Files in DIR]),with_objfiles="$withval",with_objfiles="sourcedir")
if test "$with_objfiles" = "sourcedir"; then
    mmake_srcpwd=`cd ${srcdir} ; ${PWDCMD-pwd}`
    mmake_objdir="${mmake_srcpwd}"
else
    mmake_objdir="$with_objfiles"
fi
AC_MSG_RESULT($with_objfiles)

dnl Checks for typedefs, structures, and compiler characteristics.
AM_C_PROTOTYPES
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd strdup strndup strerror)

AC_SUBST(mmake_objdir)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
