dnl Process this file with autoconf to produce a configure script.
AC_INIT(MetaMake,0.6)
AC_REVISION($Revision$)dnl
AC_PREREQ(2.61)
AC_CONFIG_AUX_DIR(.)
AC_CONFIG_SRCDIR(mmake.c)

dnl Find out our host
AC_CANONICAL_HOST

if test "$host_os" = "mingw32" ; then
    PWDCMD="pwd -W"
fi

#don't know where else to put this...
AC_MSG_CHECKING([Building MetaMake in .. ])
METAMAKE_BUILDDIR=`${PWDCMD-pwd}`
AC_MSG_RESULT($METAMAKE_BUILDDIR)

AC_MSG_CHECKING([MetaMake Source in .. ])
srcpwd=`cd ${srcdir} ; ${PWDCMD-pwd}`
METAMAKE_SRCDIR=${srcpwd}
AC_MSG_RESULT($METAMAKE_SRCDIR)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(stdarg.h string.h unistd.h sys/stat.h sys/types.h netinet/in.h)

AC_MSG_CHECKING([where to build objfiles])
AC_ARG_WITH(objfiledir,AC_HELP_STRING([--with-objfiledir=DIR],[Build Object Files in DIR]),with_objfiles="$withval",with_objfiles="sourcedir")
if test "$with_objfiles" = "sourcedir"; then
    mmake_srcpwd=`cd ${srcdir} ; ${PWDCMD-pwd}`
    mmake_objdir="${mmake_srcpwd}/obj"
else
    mmake_objdir="$with_objfiles"
fi
AC_MSG_RESULT($with_objfiles)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd strdup strndup strerror)

AC_SUBST(host_os)
AC_SUBST(mmake_objdir)
AC_SUBST(METAMAKE_SRCDIR)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
