doc_DATA = $(top_srcdir)/README \
           $(top_srcdir)/AUTHORS \
           $(top_srcdir)/COPYING \
           $(top_srcdir)/ChangeLog \
           $(top_srcdir)/NEWS

nobase_doc_DATA = FAQ/image/adf_dir.gif \
                  FAQ/image/adf_file.gif \
                  FAQ/adf_info.html \
                  FAQ/adf_info.txt \
                  FAQ/adf_info_V0_9.txt \
                  api_device.html \
                  api_dir.html \
                  api_env.html \
                  api_file.html \
                  api_index.html \
                  api_native.html \
                  api_salv.html \
                  api_volume.html \
                  API.txt \
                  version0.7.9d_gary.txt

EXTRA_DIST = doc_DATA nobase_doc_DATA

